--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
     <a class="color-scheme hide color-scheme-light text-white bg-base-color d-none" href="javascript:void(0)"><i class="lni-sun"></i></a>
 
 
-    <div id="color-switcher" class="color-switcher" >
+    <!-- <div id="color-switcher" class="color-switcher" >
         <div class="text-center color-pallet hide">
             <h6 class="text-center mt-3">Select your color</h6>
             <ul class="pattern">
@@ -361,7 +361,7 @@
         <div class="pallet-button hide">
             <a href="#" class="cp-toggle"><i class="fa fa-cog fa-spin"></i></a>
         </div>
-    </div>
+    </div> -->
 
  
 
