Added Color Switcher

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <link rel="stylesheet" href="/Main/assets/css/color/orange-color.css" id="option-color">
         <!--  Custom Style CSS  -->
         <link rel="stylesheet" href="/Main/assets/css/main.css">
+        <!--  Icofont CSS  -->
+        <link rel="stylesheet" href="/Main/assets/icofont/icofont.min.css">
     </head>
     <body data-spy="scroll" data-target="#scrollspy" data-offset="70" class="flat-demo">
 
@@ -61,7 +63,7 @@
                             <a class="nav-link" href="#">GeoJSON</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Visualisations</a>
+                            <a class="nav-link" href="#">Visuals</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Design</a>
@@ -111,7 +113,7 @@
             <div class="col-lg-12">
                 <div class="hero-content text-center">
                     <h3 class="dark-color mb-0 mt-3">Welcome to Odin!</h3>
-                    <h1 class="dark-color text-capitalize mb-3"><span class="base-color">IP 2  |</span> <span class="element" data-elements="GeoJSON.,APIs.,Visualisations."></span></h1>
+                    <h1 class="dark-color text-capitalize mb-3"><span class="base-color">IP 2  |</span> <span class="element" data-elements="GeoJSON.,APIs.,Visuals."></span></h1>
                     <p class=" mx-auto mt-4 dark-color">A website to demonstrate GeoJSON data and API data through powerful and interactive visualisations.</p>
                 </div>
             </div>
@@ -325,7 +327,7 @@
     <a class="color-scheme hide color-scheme-light text-white bg-base-color d-none" href="javascript:void(0)"><i class="lni-sun"></i></a>
 
 
-    <!-- <div id="color-switcher" class="color-switcher" >
+    <div id="color-switcher" class="color-switcher" >
         <div class="text-center color-pallet hide">
             <h6 class="text-center mt-3">Select your color</h6>
             <ul class="pattern">
@@ -361,9 +363,9 @@
         <div class="pallet-button hide">
             <a href="#" class="cp-toggle"><i class="fa fa-cog fa-spin"></i></a>
         </div>
-    </div> -->
+    </div>
 
- 
+    <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
     <!--  Jquery  Js  -->
     <script src="/Main/assets/js/jquery-3.4.1.min.js"></script>
