--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <link rel="stylesheet" href="/Main/assets/css/color/orange-color.css" id="option-color">
         <!--  Custom Style CSS  -->
         <link rel="stylesheet" href="/Main/assets/css/main.css">
+        <!--  Icofont CSS  -->
+        <link rel="stylesheet" href="/Main/assets/icofont/icofont.min.css">
     </head>
     <body data-spy="scroll" data-target="#scrollspy" data-offset="70" class="flat-demo">
 
@@ -363,6 +365,7 @@
         </div>
     </div> -->
 
+    <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
  
 
     <!--  Jquery  Js  -->
