--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
         <div class="pallet-button hide">
             <a href="#" class="cp-toggle"><i class="fa fa-cog fa-spin"></i></a>
         </div>
-    </div> -->
+    </div> 
 
     <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
  
