--- a/index.html
+++ b/index.html
@@ -319,12 +319,17 @@
         </div>
     </section>
     <!--  Contact End  -->
-
-
+    <div class="container">
+        <div class="row">
+            <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
+        </div>
+    </div>
+    
 
     <!--   Color Scheme  -->
     <a class="color-scheme hide text-white bg-base-color d-inline-block" href="javascript:void(0)"><i class="lni-night"></i></a>
     <a class="color-scheme hide color-scheme-light text-white bg-base-color d-none" href="javascript:void(0)"><i class="lni-sun"></i></a>
+    <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
 
      <div id="color-switcher" class="color-switcher" > 
@@ -362,8 +367,7 @@
         </div>
         <div class="pallet-button hide">
             <a href="#" class="cp-toggle"><i class="fa fa-cog fa-spin"></i></a>
-        </div>
-        <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
+        </div>  
     </div> 
 
     
