--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
      <!-- Social -->
      <div class="social-box">
         <div class="follow-label">
-            <span>Follow Me</span>
+            <span>Follow Us</span>
         </div>
         <div class="social">
             <a href="javascript:void(0);"><i class="fa fa-facebook"></i></a>
@@ -319,11 +319,6 @@
         </div>
     </section>
     <!--  Contact End  -->
-    <div class="container">
-        <div class="row">
-            <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
-        </div>
-    </div>
     
 
     <!--   Color Scheme  -->
