--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                         </div>
                         <div class="testimonial-detail">
                             <span class="d-block font-weight-bold">Yassine Lakhmarti,</span>
-                            <small class="text-muted"> Research & Group Report</small>
+                            <small class="text-muted"> Group Report</small>
                         </div>
                     </div>
                     <p class="mb-0 text-muted">" Explain how your research helped the team to find more resources for inspirations. Also, add your experience in handling the report with our collaboration. "</p>
@@ -313,7 +313,7 @@
 
             <div class="row copy-right">
                 <div class="col-12 text-center text-dark">
-                    <p>Copyright © 2020. This website has been designed by <span class="base-color">Odin</span></p>
+                    <p>Copyright © 2020. Designed by <span class="base-color">Odin</span></p>
                 </div>
             </div>
         </div>
