Added Team Page

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <a class="nav-link active" href="#hero">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Team</a>
+                            <a class="nav-link" href="/Main/team.html">Team</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">GeoJSON</a>
@@ -157,7 +157,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="title-content mb-4">
-                        <h2 class="base-color">IP 2 Requirements</h2>
+                        <h2 class="base-color">Requirements</h2>
                     </div>
                 </div>
             </div>
@@ -386,7 +386,7 @@
     <!-- Map Js -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBcmB207_E3E4SkA8jTA8FQjSWTop9YxZU"></script>
     <!--  Custom JS  -->
-    <script src="/Main/assets/js/arshia.js"></script>
+    <script src="/Main/assets/js/main.js"></script>
 
     </body>
 </html>
