--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Odin | Home</title>
         <meta name="description" content="" />
         <meta name="keywords" content="" />
-        <meta name="author" content="Odin Team" />
+        <meta name="author" content="Odin Team"/>
 
         <!--  FavIcon  -->
         <link rel="apple-touch-icon" sizes="180x180" href="/Main/assets/favicons/apple-touch-icon.png">
@@ -41,11 +41,12 @@
     <div id="overlayer"></div>
     <span class="loader"></span>
 
+   
     <!--    Header Start    -->
     <header id="header" class="header fixed-top">
         <nav id="scrollspy" class="navbar navbar-expand-lg header-nav">
             <div class="container-fluid">
-                <a class="navbar-brand font-weight-bold" href="#hero">Od<span class="base-color">in</span></a>
+                <a class="navbar-brand font-weight-bold" href="#">Od<span class="base-color">in</span></a>
                 <!--  Navbar Toggler Button Start -->
                 <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#toggle-menu" aria-controls="toggle-menu" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="lni-menu size-md"></span>
@@ -54,7 +55,7 @@
                 <div class="collapse navbar-collapse" id="toggle-menu">
                     <ul class="navbar-nav nav-pills ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" href="#hero">Home</a>
+                            <a class="nav-link active" href="#">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/Main/team.html">Team</a>
