--- a/Main/team.html
+++ b/Main/team.html
@@ -6,7 +6,7 @@
         <title>Odin | Team</title>
         <meta name="description" content="" />
         <meta name="keywords" content="" />
-        <meta name="author" content="Odin" />
+        <meta name="author" content="Odin Team"/>
 
         <!--  FavIcon  -->
         <link rel="apple-touch-icon" sizes="180x180" href="/Main/assets/favicons/apple-touch-icon.png">
@@ -107,7 +107,7 @@
                         <div class="hero-item">
                             <h1 class="dark-color mb-3">We are <span class="base-color"> Odin</span></h1>
                             <h4 class="text-darktext-capitalize mb-0"><span class="base-color">A team of </span> <span class="element" data-elements="UI/UX Designers.,Web Developers.,Digital Consultants."></span></h4>
-                            <p class="text-muted my-4">A dynamic and creative team from ALU Mauritus with diverse skillsets to create and deliver great digital <del>user</del> human experiences.</p>
+                            <p class="text-muted my-4">A dynamic and creative team from ALU Mauritus with diverse skillsets to create and deliver great digital <del>user</del> <B> human</B> experiences.</p>
                             <h4 class="text-darktext-capitalize mb-0"><span class="base-color">We value </span> <span class="element1" data-elements1="Creativity.,Perseverance.,Integrity."></span></h4>
                             <p class="text-muted my-4">Our mission is to deliver innovative digital experiences to human beings through responsible design.</p>
                             <div class="button-border mt-2">
@@ -135,6 +135,9 @@
     <!--   Madani's Profile Start  -->
     <section id="about" class="about pb-5 pt-6">
         <div class="container">
+            <div class="title-content mb-4">
+                <h2 class="base-color">Team Members</h2>
+            </div>
             <div class="row">
                 <div class="col-lg-6">
                     <div class="image-border">
@@ -590,7 +593,7 @@
     <!--  PopUp Js  -->
     <script src="assets/js/jquery.magnific-popup.min.js"></script>
     <!-- Map Js -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBcmB207_E3E4SkA8jTA8FQjSWTop9YxZU"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOqcZATYAxi91Tunkke4RApbjL_QLqs_c"></script>
     <!--  Custom JS  -->
     <script src="assets/js/main.js"></script>
 
