--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="title-content mb-4">
-                        <h2 class="base-color">IP 2 Requirements</h2>
+                        <h2 class="base-color">Requirements</h2>
                     </div>
                 </div>
             </div>
@@ -282,7 +282,7 @@
                         </div>
                         <div class="testimonial-detail">
                             <span class="d-block font-weight-bold">Yassine Lakhmarti,</span>
-                            <small class="text-muted"> Research & Group Report</small>
+                            <small class="text-muted"> Group Report</small>
                         </div>
                     </div>
                     <p class="mb-0 text-muted">" Explain how your research helped the team to find more resources for inspirations. Also, add your experience in handling the report with our collaboration. "</p>
