Update team and index.html

--- a/Main/team.html
+++ b/Main/team.html
@@ -148,35 +148,19 @@
                         <h2 class="mb-0 base-color">Madani Napaul</h2>
                         <h5 class="text-dark my-3"><span class="base-color">UI/UX</span> Designer & Web Developer</h5>
                         <div class="row">
-                            <div class="col-5 personal-info">
+                            <div class="col-7 personal-info">
                                 <ul class="list-unstyled">
                                     <li>
-                                        <p>Birthday : <span> 19 May</span></p>
+                                        <p>Email : <span> mnapaul17@alustudent.com</span></p>
                                     </li>
                                     <li>
-                                        <p>University : <span> ALU</span></p>
+                                        <p>Degree : <span> BSc(Hons) Computing</span></p>
                                     </li>
                                     <li>
                                         <p>Phone : <span> +230 5251 03 01</span></p>
                                     </li>
                                     <li>
                                         <p>City : <span> Moka, MAURITIUS</span></p>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="col-7 personal-info">
-                                <ul class="list-unstyled">
-                                    <li>
-                                        <p>Role : <span> Team Leader</span></p>
-                                    </li>
-                                    <li>
-                                        <p>Degree : <span> Bachelor</span></p>
-                                    </li>
-                                    <li>
-                                        <p>Mail : <span> mnapaul17@alustudent.com</span></p>
-                                    </li>
-                                    <li>
-                                        <p>Interest : <span> Digital Design</span></p>
                                     </li>
                                 </ul>
                             </div>
@@ -208,35 +192,19 @@
                             <h2 class="mb-0 base-color">Jeremiah Nnadi</h2>
                             <h5 class="text-dark my-3"><span class="base-color">UI/UX</span> Designer & Web Designer</h5>
                             <div class="row">
-                                <div class="col-5 personal-info">
+                                <div class="col-7 personal-info">
                                     <ul class="list-unstyled">
                                         <li>
-                                            <p>Birthday : <span> 14 December</span></p>
+                                            <p>Email : <span> jnnadi17@alustudent.com</span></p>
                                         </li>
                                         <li>
-                                            <p>University : <span> ALU</span></p>
+                                            <p>Degree : <span> BSc(Hons) Computing</span></p>
                                         </li>
                                         <li>
                                             <p>Phone : <span> +230 5817 9847</span></p>
                                         </li>
                                         <li>
                                             <p>City : <span> Lagos, NIGERIA</span></p>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <div class="col-7 personal-info">
-                                    <ul class="list-unstyled">
-                                        <li>
-                                            <p>Role : <span> Prototyping</span></p>
-                                        </li>
-                                        <li>
-                                            <p>Degree : <span> Bachelor</span></p>
-                                        </li>
-                                        <li>
-                                            <p>Mail : <span> jnnadi17@alustudent.com</span></p>
-                                        </li>
-                                        <li>
-                                            <p>Interest : <span> Complex Systems</span></p>
                                         </li>
                                     </ul>
                                 </div>
@@ -268,35 +236,19 @@
                                     <h2 class="mb-0 base-color">Yassine Lakhmarti</h2>
                                     <h5 class="text-dark my-3"><span class="base-color">Full Stack</span> Web Developer</h5>
                                     <div class="row">
-                                        <div class="col-5 personal-info">
+                                        <div class="col-7 personal-info">
                                             <ul class="list-unstyled">
                                                 <li>
-                                                    <p>Birthday : <span> 1 April 1990</span></p>
+                                                    <p>Email : <span> ylakhmarti17@alustudent.com</span></p>
                                                 </li>
                                                 <li>
-                                                    <p>University : <span> ALU</span></p>
+                                                    <p>Degree : <span> BSc(Hons) Computing</span></p>
                                                 </li>
                                                 <li>
                                                     <p>Phone : <span> +230 5783 1295</span></p>
                                                 </li>
                                                 <li>
                                                     <p>City : <span> Kenitra, MOROCCO</span></p>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                        <div class="col-7 personal-info">
-                                            <ul class="list-unstyled">
-                                                <li>
-                                                    <p>Role : <span> Web Developer</span></p>
-                                                </li>
-                                                <li>
-                                                    <p>Degree : <span> Bachelor</span></p>
-                                                </li>
-                                                <li>
-                                                    <p>Mail : <span> ylakhmarti17@alustudent.com</span></p>
-                                                </li>
-                                                <li>
-                                                    <p>Interest : <span> Crypto Assets</span></p>
                                                 </li>
                                             </ul>
                                         </div>
@@ -328,35 +280,19 @@
                                 <h2 class="mb-0 base-color">Julian Mason</h2>
                                 <h5 class="text-dark my-3"><span class="base-color">Web</span> Developer</h5>
                                 <div class="row">
-                                    <div class="col-5 personal-info">
+                                    <div class="col-7 personal-info">
                                         <ul class="list-unstyled">
                                             <li>
-                                                <p>Birthday : <span> 1 April 1990</span></p>
+                                                <p>Email : <span> jbara-mason17@alustudent.com</span></p>
                                             </li>
                                             <li>
-                                                <p>University : <span> ALU</span></p>
+                                                <p>Degree : <span> BSc(Hons) Computing</span></p>
                                             </li>
                                             <li>
                                                 <p>Phone : <span> +230 5948 8915</span></p>
                                             </li>
                                             <li>
                                                 <p>City : <span> Lagos, NIGERIA</span></p>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-7 personal-info">
-                                        <ul class="list-unstyled">
-                                            <li>
-                                                <p>Role : <span> Lead Developer</span></p>
-                                            </li>
-                                            <li>
-                                                <p>Degree : <span> Bachelor</span></p>
-                                            </li>
-                                            <li>
-                                                <p>Mail : <span> jbara-mason17@alustudent.com</span></p>
-                                            </li>
-                                            <li>
-                                                <p>Interest : <span> Real Estate</span></p>
                                             </li>
                                         </ul>
                                     </div>
