--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
      <!-- Social -->
      <div class="social-box">
         <div class="follow-label">
-            <span>Follow Me</span>
+            <span>Follow Us</span>
         </div>
         <div class="social">
             <a href="javascript:void(0);"><i class="fa fa-facebook"></i></a>
