--- a/Main/team.html
+++ b/Main/team.html
@@ -106,9 +106,8 @@
                     <div class="col-lg-6 order-2 order-lg-1">
                         <div class="hero-item">
                             <h1 class="dark-color mb-3">We are <span class="base-color"> Odin</span></h1>
-                            <h4 class="text-darktext-capitalize mb-0"><span class="base-color">A team of </span> <span class="element" data-elements="UI/UX Designers.,Web Developers.,Digital Consultants."></span></h4>
+                            <h4 class="text-darktext-capitalize mb-0"><span class="base-color">A team of </span> <span class="element" data-elements="UI/UX Designers.,Web Developers.,Researchers."></span></h4>
                             <p class="text-muted my-4">A dynamic and creative team from ALU Mauritus with diverse skillsets to create and deliver great digital <del>user</del> <B> human</B> experiences.</p>
-                            <p class="text-muted my-4">Our mission is to deliver innovative digital experiences to human beings through responsible design.</p>
                             <div class="button-border mt-2">
                                 <a href="http://www.alueducation.com" target="_blank" class="pill-button">More about ALU</a>
                             </div>
