--- a/Main/team.html
+++ b/Main/team.html
@@ -47,7 +47,7 @@
     <header id="header" class="header fixed-top">
         <nav id="scrollspy" class="navbar navbar-expand-lg header-nav">
             <div class="container-fluid">
-                <a class="navbar-brand font-weight-bold" href="#hero">Od<span class="base-color">in</span></a>
+                <a class="navbar-brand font-weight-bold" href="/index.html">Od<span class="base-color">in</span></a>
                 <!--  Navbar Toggler Button Start -->
                 <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#toggle-menu" aria-controls="toggle-menu" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="lni-menu size-md"></span>
