--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                             <a class="nav-link" href="/Main/team.html">Team</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">GeoJSON</a>
+                            <a class="nav-link" href="/Main/geojson.html">GeoJSON</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Visualisations</a>
+                            <a class="nav-link" href="/Main/visuals.html">Visualisations</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Design</a>
