--- a/Main/visuals.html
+++ b/Main/visuals.html
@@ -59,13 +59,13 @@
                             <a class="nav-link" href="/index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="/Main/team.html">Team</a>
+                            <a class="nav-link" href="/Main/team.html">Team</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/Main/geojson.html">GeoJSON</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/Main/visuals.html">Visualisations</a>
+                            <a class="nav-link active" href="/Main/visuals.html">Visualisations</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Design</a>
@@ -192,6 +192,7 @@
         </div>
     </section>
     <!--  Contact End  -->
+
     <!--   Color Scheme  -->
     <a class="color-scheme hide text-white bg-base-color d-inline-block" href="javascript:void(0)"><i class="lni-night"></i></a>
     <a class="color-scheme hide color-scheme-light text-white bg-base-color d-none" href="javascript:void(0)"><i class="lni-sun"></i></a>
