--- a/Main/visuals.html
+++ b/Main/visuals.html
@@ -259,7 +259,7 @@
     <script src="assets/js/arshia.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js" integrity="sha256-R4pqcOYV8lt7snxMQO/HSbVCFRPMdrhAFMH+vr9giYI=" crossorigin="anonymous"></script>
-    <script language="JavaScript" src="http://www.geoplugin.net/javascript.gp" type="text/javascript"></script>
+    <script language="JavaScript" src="https://www.geoplugin.net/javascript.gp" type="text/javascript"></script>
     <script src="/Main/assets/js/countries.js"></script>
     <script src="/Main/assets/js/app.js"></script>
 
