--- a/Main/team.html
+++ b/Main/team.html
@@ -529,7 +529,7 @@
     <!-- Map Js -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOqcZATYAxi91Tunkke4RApbjL_QLqs_c"></script>
     <!--  Custom JS  -->
-    <script src="assets/js/arshia.js"></script>
+    <script src="assets/js/main.js"></script>
 
     </body>
 </html>
