--- a/Main/visuals.html
+++ b/Main/visuals.html
@@ -256,7 +256,7 @@
     <!-- Map Js -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOqcZATYAxi91Tunkke4RApbjL_QLqs_c"></script>
     <!--  Custom JS  -->
-    <script src="assets/js/arshia.js"></script>
+    <script src="assets/js/main.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js" integrity="sha256-R4pqcOYV8lt7snxMQO/HSbVCFRPMdrhAFMH+vr9giYI=" crossorigin="anonymous"></script>
     <script language="JavaScript" src="http://www.geoplugin.net/javascript.gp" type="text/javascript"></script>
