--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
 		<link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700" rel="stylesheet">
 
         <!-- Bootstrap Css -->
-        <link rel="stylesheet" href="/Main/assets/css/bootstrap.css">
+        <link rel="stylesheet" href="./Main/assets/css/bootstrap.css">
         <!-- FontAwesome Css -->
-        <link rel="stylesheet" href="/Main/assets/css/font-awesome.min.css">
+        <link rel="stylesheet" href="./Main/assets/css/font-awesome.min.css">
         <!-- LineIcons Css -->
-        <link rel="stylesheet" href="/Main/assets/css/LineIcons.css">
+        <link rel="stylesheet" href="./Main/assets/css/LineIcons.css">
         <!-- Owl Carousel Css -->
-        <link rel="stylesheet" href="/Main/assets/css/owl.carousel.min.css">
+        <link rel="stylesheet" href="./Main/assets/css/owl.carousel.min.css">
         <!-- Magnific Css -->
-        <link rel="stylesheet" href="/Main/assets/css/magnific-popup.css">
+        <link rel="stylesheet" href="./Main/assets/css/magnific-popup.css">
         <!-- Colors Css -->
-        <link rel="stylesheet" href="/Main/assets/css/color/orange-color.css" id="option-color">
+        <link rel="stylesheet" href="./Main/assets/css/color/orange-color.css" id="option-color">
         <!--  Custom Style CSS  -->
-        <link rel="stylesheet" href="/Main/assets/css/main.css">
+        <link rel="stylesheet" href="./Main/assets/css/main.css">
     </head>
     <body data-spy="scroll" data-target="#scrollspy" data-offset="70" class="flat-demo">
 
@@ -55,13 +55,13 @@
                             <a class="nav-link active" href="#hero">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/Main/team.html">Team</a>
+                            <a class="nav-link" href="./Main/team.html">Team</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/Main/geojson.html">GeoJSON</a>
+                            <a class="nav-link" href="./Main/geojson.html">GeoJSON</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/Main/visuals.html">Visualisations</a>
+                            <a class="nav-link" href="./Main/visuals.html">Visualisations</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Design</a>
@@ -366,25 +366,25 @@
  
 
     <!--  Jquery  Js  -->
-    <script src="/Main/assets/js/jquery-3.4.1.min.js"></script>
+    <script src="./Main/assets/js/jquery-3.4.1.min.js"></script>
     <!--  Bootstrap Js  -->
-    <script src="/Main/assets/js/bootstrap.js"></script>
+    <script src="./Main/assets/js/bootstrap.js"></script>
     <!--  Easing Js  -->
-    <script src="/Main/assets/js/jquery.easing.min.js"></script>
+    <script src="./Main/assets/js/jquery.easing.min.js"></script>
     <!--  Type  Js  -->
-    <script src="/Main/assets/js/typed.js"></script>
+    <script src="./Main/assets/js/typed.js"></script>
     <!--  Owl Carousel Js  -->
-    <script src="/Main/assets/js/owl.carousel.min.js"></script>
+    <script src="./Main/assets/js/owl.carousel.min.js"></script>
     <!--  Isotope  Js  -->
-    <script src="/Main/assets/js/isotope.pkgd.min.js"></script>
+    <script src="./Main/assets/js/isotope.pkgd.min.js"></script>
     <!--  Count  Js  -->
-    <script src="/Main/assets/js/jquery.countTo.js"></script>
+    <script src="./Main/assets/js/jquery.countTo.js"></script>
     <!--  PopUp Js  -->
-    <script src="/Main/assets/js/jquery.magnific-popup.min.js"></script>
+    <script src="./Main/assets/js/jquery.magnific-popup.min.js"></script>
     <!-- Map Js -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBcmB207_E3E4SkA8jTA8FQjSWTop9YxZU"></script>
     <!--  Custom JS  -->
-    <script src="/Main/assets/js/arshia.js"></script>
+    <script src="./Main/assets/js/main.js"></script>
 
     </body>
 </html>
