--- a/Main/geojson.html
+++ b/Main/geojson.html
@@ -379,6 +379,6 @@
     <!-- Map Js -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBcmB207_E3E4SkA8jTA8FQjSWTop9YxZU"></script>
     <!--  Custom JS  -->
-    <script src="assets/js/arshia.js"></script>
+    <script src="assets/js/main.js"></script>
     </body>
 </html>
